<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_img_plant_and_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/iv_photo_plant"
            android:layout_width="160dp"
            android:layout_height="230dp"
            android:layout_weight="70"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/ll_info_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/iv_photo_plant"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_name_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green_dark"
                android:padding="5dp"
                android:text="@string/title_name_plant"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_name_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/name_plant"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_title_name_scientific_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green_dark"
                android:padding="5dp"
                android:text="@string/title_name_scientific_plant"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_name_scientific_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/name_scientific_plant"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_title_name_kingdom_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/green_dark"
                android:text="@string/title_name_kingdom_plant"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_name_kingdom_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/name_kingdom_plant"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_title_plant_come_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green_dark"
                android:padding="5dp"
                android:text="@string/title_plant_come_from"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_plant_come_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_come_from"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_photo_plant"
            android:layout_marginVertical="20dp"
            >

            <TextView
                android:id="@+id/title_detail_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/green_dark"
                android:padding="5dp"
                android:text="@string/plant_come_from"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_detail_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_come_from"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>